--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+/** Import Fonts **/
 @import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Quicksand:wght@300;400;500;600;700&display=swap");
 
 * {
@@ -7,7 +8,6 @@
 }
 
 body {
-  /* height: 100vh; */
   background-color: #f8ede3;
   font-family: "Quicksand", sans-serif;
 }
