--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,18 @@ body {
   font-family: "Quicksand", sans-serif;
   color: #331d2c;
 }
+
+/**CSS Style for links in menu*/
+.menu-link {
+  text-decoration: none;
+  color: #331d2c;
+}
+
+.menu-link:hover {
+  text-decoration: underline;
+}
+
+.menu-link:visited {
+  text-decoration: none;
+  color: #331d2c;
+}
