LogIn-form works. Can log in both as user or admin. Show login-form if not logged in, and the name of the user if already logged in

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,7 @@ body {
   color: #331d2c;
 }
 
+/**CSS Style for red border around inputs if something went wrong*/
 .error-border {
-  border: 1px solid red !important;
+  border: 2px solid #dc3545 !important;
 }
