--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .video-background {
   position: relative;
   overflow: hidden;
-  height: 90vh;
+  height: 85vh;
 }
 
 .video {
@@ -12,4 +12,5 @@
   height: 100%;
   object-fit: cover;
   z-index: -1;
+  padding: 0;
 }
