--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,6 +33,7 @@ body {
   border: 2px solid #dc3545 !important;
 }
 
+/**CSS Style for zoom-effect when hover*/
 .zoom-effect {
   transition: transform 0.3s ease-in-out;
 }
