--- a/client/src/components/ManagingOrders/ManagingOrders.css
+++ b/client/src/components/ManagingOrders/ManagingOrders.css
@@ -1,3 +1,5 @@
+/* Stylesheet for the checkbox and the orders table in managing orders */
+
 input[type="checkbox"]:checked {
   background-color: #331d2c !important;
   border: 1px solid #331d2c;
