--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+/** General CSS Stylesheet **/
+
 /** Import Fonts **/
 @import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Quicksand:wght@300;400;500;600;700&display=swap");
 
