--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -3,7 +3,9 @@
 .video-background {
   position: relative;
   overflow: hidden;
-  height: 90vh;
+  height: 80vh;
+  width: 100vw;
+  padding: 0;
 }
 
 .video {
@@ -13,6 +15,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
+  z-index: 1;
   padding: 0;
 }
