--- a/client/src/components/ShopByCategory/ShopByCategory.css
+++ b/client/src/components/ShopByCategory/ShopByCategory.css
@@ -4,7 +4,10 @@
 
 .category-container {
   height: 100%;
-  gap: 3rem;
+  width: 80vw;
+  display: flex;
+  gap: 2rem;
+  background-color: darkgray;
 }
 
 .category-box {
