--- a/client/src/components/ShopByCategory/ShopByCategory.css
+++ b/client/src/components/ShopByCategory/ShopByCategory.css
@@ -6,12 +6,14 @@
   height: 100%;
   width: 80vw;
   display: flex;
-  gap: 2rem;
-  background-color: darkgray;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
 }
 
 .category-box {
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 400px;
   background-color: #a78295;
+  padding: 0;
 }
