--- a/client/src/components/Banner/Banner.css
+++ b/client/src/components/Banner/Banner.css
@@ -5,3 +5,28 @@
   background-color: #a78295;
   padding: 0;
 }
+
+.banner-box {
+  width: 50%;
+  max-height: 100%;
+  object-fit: cover;
+  padding: 0;
+}
+
+.banner-text {
+  color: #f8ede3;
+  font-weight: lighter;
+}
+
+@media screen and (max-width: 850px) {
+  .banner-container {
+    flex-direction: column;
+    width: 95vw;
+  }
+
+  .banner-box {
+    width: 100%;
+    object-fit: cover;
+    padding: 0;
+  }
+}
