--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,15 @@ body {
   color: #331d2c;
 }
 
+.page-wrapper {
+  margin-top: 10rem;
+  padding: 0;
+}
+
+.title-large {
+  font-family: "Julius Sans One";
+}
+
 /**CSS Style for links in menu*/
 .menu-link {
   text-decoration: none;
