--- a/client/src/components/ShopByCategory/ShopByCategory.css
+++ b/client/src/components/ShopByCategory/ShopByCategory.css
@@ -6,18 +6,24 @@
   height: 100%;
   width: 80vw;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 2rem;
   padding: 0;
   margin: 0;
 }
 
 .category-box {
-  height: 400px;
-  width: 400px;
+  height: 350px;
+  width: 350px;
   background-color: #a78295;
   padding: 0;
   margin: 0;
+}
+
+@media screen and (max-width: 1390px) {
+  .category-container {
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 600px) {
